package Creational.Singleton.Interface;

public interface Student {
    public static final String name = "Default Student";
}
